--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
 	<build>
 		<finalName>hello-resources</finalName>
 		<plugins>
+			<!--Plugin to help us go offline -->
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-dependency-plugin</artifactId>
+			    <version>3.1.1</version>			
+			</plugin>
 			<plugin>
 				<!-- We pack everything as a single executable JAR -->
 				<groupId>org.apache.maven.plugins</groupId>
@@ -54,6 +60,7 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
+							<createDependencyReducedPom>false</createDependencyReducedPom>
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
