--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.github.raonigabriel</groupId>
 	<artifactId>graal-hello-resources</artifactId>
-	<version>1.0.1</version>
+	<version>1.0.2</version>
 	<packaging>jar</packaging>
 
 	<name>graal-hello-resources</name>
@@ -29,7 +29,7 @@
 		<java.version>1.8</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<graal-version>1.0.0-rc8</graal-version>
+		<graal-version>19.0.0</graal-version>
 	</properties>
 
 	<dependencies>
@@ -68,7 +68,7 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
-							<outputFile>${project.build.directory}/${build.finalName}-fat.${project.packaging}</outputFile>
+							<outputFile>${project.build.directory}/${project.build.finalName}-fat.${project.packaging}</outputFile>
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
@@ -80,6 +80,7 @@
 				</executions>
 			</plugin>
 			<!-- We pack everything as a single native executable (static)  -->
+			<!-- We also force initialization at build time, to assign 'IS_NATIVE' to true -->
 			<plugin>
 				<groupId>com.oracle.substratevm</groupId>
 				<artifactId>native-image-maven-plugin</artifactId>
@@ -91,7 +92,7 @@
 					<goal>native-image</goal>
 						</goals>
 						<configuration>
-							<buildArgs>--static -H:Name=${build.finalName} -H:IncludeResources=message.txt -H:NumberOfThreads=8</buildArgs>
+							<buildArgs>--static --initialize-at-build-time -H:Name=${project.build.finalName} -H:IncludeResources=message.txt -H:NumberOfThreads=8</buildArgs>
 						</configuration>
 					</execution>
 				</executions>
