--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.github.raonigabriel</groupId>
 	<artifactId>graal-hello-resources</artifactId>
-	<version>1.1.1</version>
+	<version>1.2.0</version>
 	<packaging>jar</packaging>
 
 	<name>graal-hello-resources</name>
@@ -38,11 +38,9 @@
 	</developers>
 
 	<properties>
+    	<jdk.version>11</jdk.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
-		<maven.compiler.source>${java.version}</maven.compiler.source>
-		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -50,7 +48,7 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.6</version>
+			<version>2.7</version>
 		</dependency>
 	</dependencies>
 
@@ -63,25 +61,28 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
-					<version>3.1.1</version>
+					<version>3.1.2</version>
 				</plugin>			
-				<!-- Plugin to grab git information and store that into a file -->
+				<!-- Plugin to compile Java -->
 				<plugin>
-					<groupId>pl.project13.maven</groupId>
-					<artifactId>git-commit-id-plugin</artifactId>
-					<version>3.0.0</version>
-				</plugin>
+				    <groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-compiler-plugin</artifactId>
+				    <version>3.8.1</version>
+				    <configuration>
+				        <release>${jdk.version}</release>
+				    </configuration>
+				</plugin>				
 				<!-- Plugin to pack everything as a single executable JAR -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-shade-plugin</artifactId>
-					<version>3.2.1</version>
+					<version>3.2.4</version>
 				</plugin>
 				<!-- Plugin to run Proguard on our JAR -->
 				<plugin>
 					<groupId>com.github.wvengen</groupId>
 					<artifactId>proguard-maven-plugin</artifactId>
-					<version>2.0.14</version>
+					<version>2.3.1</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -108,6 +109,14 @@
 									<mainClass>com.github.raonigabriel.graal.HelloResources</mainClass>
 								</transformer>
 							</transformers>
+							<filters>
+							   <filter>
+							      <artifact>*:*</artifact>
+							      <excludes>
+							         <exclude>META-INF/*.MF</exclude>
+							      </excludes>
+							   </filter>
+							</filters>
 						</configuration>
 					</execution>
 				</executions>
@@ -142,8 +151,7 @@
 							<option>-printmapping target/proguard.map</option>
 					</options>
 					<libs>
-						<lib>${java.home}/lib/rt.jar</lib>
-						<lib>${java.home}/lib/jsse.jar</lib>
+						<lib>${java.home}/jmods</lib>
 					</libs>
 				</configuration>
 			</plugin>
